--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "0.66.2",
+    "react-native-dropdown-picker": "^5.2.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-vector-icons": "^9.0.0"
   },
-  "resolutions":{
+  "resolutions": {
     "@react-native-community/cli-platform-android": "3.0.3"
   },
   "devDependencies": {
