Changed fonts for readability

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
-    "react-native-vector-icons": "^9.0.0",
-    "stringify": "^5.2.0"
+    "react-native-vector-icons": "^9.0.0"
   },
   "resolutions": {
     "@react-native-community/cli-platform-android": "3.0.3"
