--- a/ios/Somm/Info.plist
+++ b/ios/Somm/Info.plist
@@ -72,6 +72,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Courgette-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
